tests/sumo/spec/flow/errors/poisson_invalid/output.sumo
Loading net-file from 'net.net.xml' ... done (1ms).
Loading additional-files from 'input_routes.rou.xml' ... done (0ms).
Loading additional-files from 'input_additional.add.xml' ... 
Loading of additional-files failed.
